Remove log model, and put in more exception handling

--- a/views/experiment_add_file.erb
+++ b/views/experiment_add_file.erb
@@ -6,7 +6,7 @@
         <div class="clearfix">
           <label for="name">File Name</label>
           <div class="input">
-            <input class="xlarge" name="name" id="name" type="text" value="<%= @experiment.name %>"/>
+            <input class="xlarge" name="name" id="name" type="text" />
           </div>
         </div>
 
