--- a/views/file.erb
+++ b/views/file.erb
@@ -17,6 +17,7 @@
   <div class="actions">
     <% if session[:user_id] %>
       <%= link_tag :to => "/file/#{@file.id}/edit", :name => 'Edit File', :class => 'btn' %>
+      <%= link_tag :to => "/download/#{@file.id}", :name => 'download'%>
    	<% end %>
   </div>
 <% end %>
