--- a/views/download.erb
+++ b/views/download.erb
@@ -1,4 +1,4 @@
 <form action="/download" method="post">
   <input type = "file" name="filename">
-  <input type = "submit" value="dowload">
+  <input type = "submit" value="download">
 </form>
