--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
     <title>Sequences</title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   </head>
   <body>
     
