--- a/views/experiment.erb
+++ b/views/experiment.erb
@@ -99,7 +99,7 @@
         <%= link_tag :to => "/experiment/#{@experiment.id}/add_owner", :name => 'Add Owner', :class => 'btn primary' %>
         <%= link_tag :to => "/experiment/#{@experiment.id}/add_file", :name => 'Add File', :class => 'btn primary' %>
         <%= link_tag :to => "/download/experiment/#{@experiment.id}", :name => 'Download Experiment', :class => 'btn primary' %>
- 	    <% elsif session[:temp_user] %>
+ 	    <% elsif session[:temp_user] == @experiment.id && session[:temp_user_type] == "experiment "%>
  	      <%= link_tag :to => "/download/experiment/#{@experiment.id}", :name => 'Download Experiment', :class => 'btn primary' %>
       <% end %>
     </div>
