--- a/views/top_bar.erb
+++ b/views/top_bar.erb
@@ -1,27 +1,27 @@
 <% path = request.path_info.split('/')[1] %>
 
-<div class="topbar">
-  <div class="fill">
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
     <div class="container">
       
       <a href="/" class="brand">
         Sequences
       </a>
-
+      
       <% if @user %>
+        <div class="nav-collapes">
+          <ul class="nav">
+            <li class="<%= 'active' if path =~ /^experiment/ %>"><a href="/experiments">Experiments</a></li>
+            <li class="<%= 'active' if path =~ /^user/ %>"><a href="/users">Users</a></li>
+          </ul>
+        </div>
       
-      <ul class="nav">
-        <li class="<%= 'active' if path =~ /^experiment/ %>"><a href="/experiments">Experiments</a></li>
-        <li class="<%= 'active' if path =~ /^user/ %>"><a href="/users">Users</a></li>
-      </ul>
-      
-      <form class="pull-left" action="/search/" method="get">
-        <input type="text" name="q" placeholder="<%= params[:q] ? params[:q] : 'Search' %>" />
-      </form>
-      
+        <form class="navbar-search" action="/search/" method="get">
+          <input type="text" name="q" placeholder="<%= params[:q] ? params[:q] : 'Search' %>" />
+        </form>
       <% end %>
       
-      <ul class="nav secondary-nav">
+      <ul class="nav pull-right">
         <% if !@user %>
           <li class="<%= 'active' if path =~ /^session/%>"><a href="/session/new">Login</a></li>
         <% else %>
