--- a/views/home.erb
+++ b/views/home.erb
@@ -3,8 +3,8 @@
     <h1>Recent Updates</h1>
   </div>
 
-  <div class="row">
-    <div class="span16">
+  <div class="row-fluid">
+    <div class="span12">
       <ul>
         <% Experiment.all.first(5).each do |e| %>
           <li><%= pretty_time(e.created_at) %> - <%= link_tag to: "/experiment/#{e.id}", name: e.name %> - <%= e.description %></li>
@@ -13,13 +13,13 @@
     </div>
   </div>
 <% else %>
-  <div class="row">
+  <div class="row-fluid">
     <div class="hero-unit">
       <h1>Sequences</h1>
       <p>This site is meant to hold our high-throughput sequence data in a manner that is easy to use and secure</p>
       <hr/>
       <div class="row">
-        <div class="span4 offset12">
+        <div class="span2">
           <a href="/session/new" class="btn">login</a> or <a href="/user/new" class="btn primary">join</a>
         </div>
       </div>
