--- a/views/home.erb
+++ b/views/home.erb
@@ -18,9 +18,9 @@
       <h1>Sequences</h1>
       <p>This site is meant to hold our high-throughput sequence data in a manner that is easy to use and secure</p>
       <hr/>
-      <div class="row">
-        <div class="span2">
-          <a href="/session/new" class="btn">login</a> or <a href="/user/new" class="btn primary">join</a>
+      <div class="row-fluid">
+        <div class="span8">
+          <a href="/session/new" class="btn-primary btn-large">Login</a>
         </div>
       </div>
     </div>
