--- a/views/experiments.erb
+++ b/views/experiments.erb
@@ -3,9 +3,9 @@
 </div>
 
 <% unless @experiments.length == 0  %>
-  <div class="row">
-    <div class="span16">
-      <table class="bordered-table zebra-striped">
+  <div class="row-fluid">
+    <div class="span12">
+      <table class="table-bordered table-striped table">
         <thead>
           <tr>
             <th>
