--- a/views/experiment.erb
+++ b/views/experiment.erb
@@ -1,14 +1,18 @@
-<% if !@experiment.nil? %>
-  <div class="page-header">
-    <h1><%= @experiment.name %></h1>
-  </div>
+
+<div class="page-header">
+  <h1><%= @experiment.name %></h1>
+</div>
+
+<div class="row-fluid span-12">
+  
   <%if @user.nil? %>
     <script type = "text/javascript">
       $(document).ready(function(){
         $("#sharelink").remove();
       });
     </script>
-  <% end %>  
+  <% end %>
+  
   <div class="share_button">
     <script type="text/javascript">
     getSharelink = function() {
@@ -22,7 +26,7 @@
       $("#sharelink").remove();
       });
     };
-    
+  
     getSharefile = function(fileid){
       $.getJSON("/getrandomstring/dataset/"+fileid, function(result){
         if (result.status == 'okay' && result.value ) {
@@ -39,14 +43,16 @@
     <p id="random_string_box"></p>
   </div>
 
-  <p>Created: <%= pretty_time @experiment.created_at %></p>
-  <% update_time = @experiment.update_at %>
-  <% if !update_time.nil? %>
-    <p>Updated Last: <%= pretty_time @experiment.update_at%></p>
-  <% end %>
-  <div class="row">
-    <div class="span16">
+
+  <div class="row-fluid">
+    <div class="span12">
+      <p>Last Change: <%= pretty_time @experiment.update_at || @experiment.created_at %></p>
+    </div>
+  </div>
   
+  <div class="row-fluid">
+    <div class="span12">
+
       <% if @experiment.users.length == 0 %>
         <p>This experiment is an orphan!</p>
       <% else %>
@@ -60,9 +66,9 @@
       <% end %>
     </div>
   </div>
-  
-  <div class="row">
-    <div class="span16">
+
+  <div class="row-fluid">
+    <div class="span12">
       <h2>Description</h2>
       <blockquote>
         <%= @experiment.description || 'no description' %>
@@ -70,9 +76,9 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="span16">
-  
+  <div class="row-fluid">
+    <div class="span12">
+
       <% if @experiment.datasets.length == 0 %>
         <p>No files!</p>
       <% else %>
@@ -96,11 +102,9 @@
     <div id="user_buttons">
       <% if session[:user_id] && !@experiment.users.first(:id => @user.id).nil? %>
         <%= link_tag :to => "/experiment/#{@experiment.id}/edit", :name => 'Edit', :class => 'btn' %>
-        <%= link_tag :to => "/experiment/#{@experiment.id}/add_owner", :name => 'Add Owner', :class => 'btn primary' %>
-        <%= link_tag :to => "/experiment/#{@experiment.id}/add_file", :name => 'Add File', :class => 'btn primary' %>
+        <%= link_tag :to => "/experiment/#{@experiment.id}/add_owner", :name => 'Add Owner', :class => 'btn' %>
+        <%= link_tag :to => "/experiment/#{@experiment.id}/add_file", :name => 'Add File', :class => 'btn' %>
       <% end %>
     </div>
   </div>
-<% else %>
-  <p>no such experiment <%= params[:id] %></p>
-<% end %>
+</div>
