--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -1,9 +1,12 @@
-<div class="row">
-  <div class="span8 offset4">
+<div class="page-header">
+  <h1>New User</h1>
+</div>
+
+<div class="row-fluid">
+  <div class="span12">
 
     <form action="/user/new" method ="post" class="formbox">
       <fieldset>
-        <legend>New User</legend>
     
         <div class="clearfix">
           <label for="name">Name:</label>
