--- a/views/users.erb
+++ b/views/users.erb
@@ -35,8 +35,8 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="span16">
+<div class="row-fluid">
+  <div class="span12">
     <div class="actions">
       <a href="/user/new" class="btn">Add User</a>
     </div>
