--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Sequences</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   </head>
   <body>
     
@@ -26,5 +27,7 @@
       </div>
     </footer>
     
+  <!-- load javascript at end -->
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   </body>
 </html>
