--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -2441,15 +2441,16 @@ button.btn.small, input[type="submit"].btn.small {
 .navbar-inner {
   padding-left: 20px;
   padding-right: 20px;
-  background-color: #2c2c2c;
-  background-image: -moz-linear-gradient(top, #333333, #222222);
-  background-image: -ms-linear-gradient(top, #333333, #222222);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
-  background-image: -webkit-linear-gradient(top, #333333, #222222);
-  background-image: -o-linear-gradient(top, #333333, #222222);
-  background-image: linear-gradient(top, #333333, #222222);
+  background-color: #025577;
+  background-image: url('/images/noise.png'), -khtml-gradient(linear, left top, left bottom, from(#0378a9), to(#025577));
+  background-image: url('/images/noise.png'), -moz-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -ms-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0378a9), color-stop(100%, #025577));
+  background-image: url('/images/noise.png'), -webkit-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), -o-linear-gradient(top, #0378a9, #025577);
+  background-image: url('/images/noise.png'), linear-gradient(top, #0378a9, #025577);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0378a9', endColorstr='#025577', GradientType=0);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -2644,7 +2645,7 @@ button.btn.small, input[type="submit"].btn.small {
   float: none;
   padding: 10px 10px 11px;
   line-height: 19px;
-  color: #999999;
+  color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
@@ -2656,7 +2657,7 @@ button.btn.small, input[type="submit"].btn.small {
 .navbar .nav .active > a, .navbar .nav .active > a:hover {
   color: #ffffff;
   text-decoration: none;
-  background-color: #222222;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .navbar .divider-vertical {
   height: 40px;
