--- a/views/top_bar.erb
+++ b/views/top_bar.erb
@@ -3,24 +3,18 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      
-      <a href="/" class="brand">
-        Sequences
-      </a>
-      
+      <a href="/" class="brand">Sequences</a>
       <% if @user %>
-        <div class="nav-collapes">
+        <div class="nav-collapse">
           <ul class="nav">
             <li class="<%= 'active' if path =~ /^experiment/ %>"><a href="/experiments">Experiments</a></li>
             <li class="<%= 'active' if path =~ /^user/ %>"><a href="/users">Users</a></li>
           </ul>
+          <form class="navbar-search" action="/search/" method="get">
+            <input type="text" class="search-query span2" name="q" placeholder="<%= params[:q] ? params[:q] : 'Search' %>" />
+          </form>
         </div>
-      
-        <form class="navbar-search" action="/search/" method="get">
-          <input type="text" name="q" placeholder="<%= params[:q] ? params[:q] : 'Search' %>" />
-        </form>
       <% end %>
-      
       <ul class="nav pull-right">
         <% if !@user %>
           <li class="<%= 'active' if path =~ /^session/%>"><a href="/session/new">Login</a></li>
@@ -29,7 +23,6 @@
           <li><a href="/session/destroy">Logout</a></li>
         <% end %>
       </ul>
-        
     </div>
   </div>
 </div>
