--- a/views/experiment_edit.erb
+++ b/views/experiment_edit.erb
@@ -1,32 +1,4 @@
-<div class="row-fluid">  
-  <div class="span12">
-    
-      <form action="/experiment/edit" method="post" class="well">
-        <fieldset>
-          <legend>Edit Experiment</legend>
-          <div class="clearfix">
-            <label for="name">Name</label>
-            <div class="input">
-              <input class="xlarge" name="name" id="name" type="text" value="<%= @experiment.name %>"/>
-            </div>
-          </div>
-        
-          <div class="clearfix">
-            <label for="description">Description</label>
-            <div class="input">
-              <textarea class="xlarge" name="description" rows="10" ><%= @experiment.description %></textarea>
-              <span class="help-inline">Describe the experiment (Optional)</span>
-            </div>
-          </div>
-          <input type="hidden" id="id" name="id" value="<%= @experiment.id %>">
-        </fieldset>
-      
-        <div class="actions">
-          <input type="submit" value="Save" class="btn btn-primary"/>
-          <a class="btn btn-danger" onclick="history.go(-1)">Cancel</a>
-        </div>
-      </form>
-    
-    </div>
-  </div>
+<div class="page-header">
+  <h1>Edit <%= @experiment.name %></h1>
 </div>
+<%= erb :experiment_form %>
