--- a/views/experiment_new.erb
+++ b/views/experiment_new.erb
@@ -2,32 +2,4 @@
   <h1>New Experiment</h1>
 </div>
 
-<div class="row-fluid">
-  <div class="span12">
-    
-    <form action="/experiment/new" method="post" class="well">
-      <fieldset>
-        <div class="clearfix">
-          <label for="name">Name</label>
-          <div class="input">
-            <input class="xlarge" name="name" id="name" type="text"/>
-          </div>
-        </div>
-        
-        <div class="clearfix">
-          <label for="description">Description</label>
-          <div class="input">
-            <textarea class="xlarge" name="description" rows="10"></textarea>
-            <span class="help-block">Describe the experiment (Optional)</span>
-          </div>
-        </div>
-        
-      </fieldset>
-      <div class="actions">
-        <input type="submit" value="Save" class="btn primary"/>
-        <a class="btn" onclick="history.go(-1)">Cancel</a>
-      </div>
-    </form>
-    
-  </div>
-</div>
+<%= erb :experiment_form %>
