--- a/views/user_new.erb
+++ b/views/user_new.erb
@@ -2,41 +2,4 @@
   <h1>New User</h1>
 </div>
 
-<div class="row-fluid">
-  <div class="span12">
-
-    <form action="/user/new" method ="post" class="formbox">
-      <fieldset>
-    
-        <div class="clearfix">
-          <label for="name">Name:</label>
-          <div class="input">
-            <input type="text" name="name">		
-          </div>
-        </div>
-    
-        <div class="clearfix">
-          <label for="email">Email:</label>
-          <div class="input">
-            <input type="text" name="email">			
-          </div>
-        </div>
-    
-        <div class="clearfix">
-          <label for="password">Password:</label>
-          <div class="input">
-            <input type="password" name="password">	
-          </div>
-        </div>
-    
-        <div class="actions">
-          <div class="input">
-            <input type="submit" class="btn primary" value="Register">
-          </div>
-        </div>
-    
-      </fieldset>
-    </form>
-    
-  </div>
-</div>
+<%= erb :user_form %>
