--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,5 +29,6 @@
     
   <!-- load javascript at end -->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="/javascripts/app.js"></script>
   </body>
 </html>
