fixed file page showing hashtag

--- a/views/file.erb
+++ b/views/file.erb
@@ -4,7 +4,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p>Created: <%= pretty_time @file.created_at %> by <%= @file.user %></p>
+    <p>Created: <%= pretty_time @file.created_at %> by <%= @file.user.name %></p>
   </div>
 </div>
 
