made user and experiment tables clickable

--- a/views/experiments.erb
+++ b/views/experiments.erb
@@ -21,6 +21,7 @@
         </thead>
         <tbody>
           <% @experiments.each do |experiment| %>
+            <tr onClick="document.location.href='<%= experiment.to_url rescue '/404' %>';" style='cursor:pointer;'>
               <td>
                 <%= experiment.id  %>
               </td>
