--- a/views/experiment.erb
+++ b/views/experiment.erb
@@ -8,7 +8,7 @@
   <div id="share_experiment">
 
     <% if @user %>
-      <a href="#" onClick="getShareExperiment(<%= @experiment.id %>);">Share</a>
+      <a href="#" onClick="getShareExperiment(<%= @experiment.id %>);">Generate Public Link</a>
     <% end %>
   </div>
 
@@ -46,24 +46,35 @@
   </div>
 
   <div class="row-fluid">
-    <div class="span12">
+    <div class="span8">
+      <h2>Files</h2>
 
       <% if @experiment.datasets.length == 0 %>
         <p>No files!</p>
       <% else %>
-        <h2>Files</h2>
-        <ul class="undecorated">
-          <% @experiment.datasets.each do |file| %>
-            <li>
-              <a href="/file/<%= file.id %>"><%= file.name %> - <%= file.created_at%> - <%= file.user.name %></a>
-              <% if @user %>
-                - <a href="#" onClick="getShareFile(<%= file.id %>);" id="share_file_<%= file.id %>">Share File</a>
-              <% end %>
-              <a id="sharelabel<%= file.id%>"></a>
-            </li>
-          <% end %>
-        </ul>
+        <table class="table table-borered table-striped table-condensed">
+          <tbody>
+            <% @experiment.datasets.each_with_index do |file, i| %>
+            <tr>
+              <td>
+                <%= i +1 %>
+              </td>
+              <td>
+                <a href="<%= file.path %>"><%= file.name %></a>
+              </td>
+              <td>
+                Created: <%= pretty_time file.created_at %>
+              </td>
+              <td>
+                <a id="sharelabel<%= file.id%>"></a>
+                <a href="#" onClick="getShareFile(<%= file.id %>);" id="share_file_<%= file.id %>">Generate Public Link</a>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
       <% end %>
+
     </div>
   </div>
 
