--- a/views/file.erb
+++ b/views/file.erb
@@ -17,7 +17,7 @@
 <div class="row-fluid">
   <div class="span12">
     <div class="actions">
-      <%= link_tag :to => "/file/#{@file.id}/download", :name => 'Download', :class => 'btn' %>
+      <%= link_tag :to => "/f/#{@file.id}", :name => 'Download', :class => 'btn' %>
     </div>
   </div>
 </div>
