--- a/views/experiment.erb
+++ b/views/experiment.erb
@@ -60,7 +60,7 @@
                 <%= i +1 %>
               </td>
               <td>
-                <a href=/f/<%= file.id %>><%= file.name %></a>
+                <a href="/f/<%= file.id %>"><%= file.name %></a>
               </td>
               <td>
                 Created: <%= pretty_time file.created_at %>
