--- a/views/experiment.erb
+++ b/views/experiment.erb
@@ -37,10 +37,14 @@
   </div>
 
   <div class="row-fluid">
-    <div class="span12">
+    <div class="span8">
+      <% if @experiment.description %>
       <h2>Description</h2>
-      <blockquote>
-        <%= @experiment.description || 'no description' %>
+        <div class="well">
+          <%= @experiment.render_description %>
+        </div>
+      <% end %>
+        
       </blockquote>
     </div>
   </div>
