--- a/views/experiment.erb
+++ b/views/experiment.erb
@@ -10,8 +10,8 @@
     <% if @user %>
       <a href="#" onClick="getShareExperiment(<%= @experiment.id %>);">Generate Public Link</a>
     <% end %>
+  
   </div>
-
 
   <div class="row-fluid">
     <div class="span12">
@@ -68,6 +68,9 @@
               </td>
               <td>
                 Created: <%= pretty_time file.created_at %>
+              </td>
+              <td>
+                Size: <%= pretty_size file.size %>
               </td>
               <td>
                 <a id="sharelabel<%= file.id %>"></a>
