--- a/views/file.erb
+++ b/views/file.erb
@@ -10,7 +10,19 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p>File size: <%= @file.size %></p>
+    <p>File size: <%=pretty_size @file.size %></p>
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="span12">
+    <p>Last Modified: <%= @file.last_modified %></p>
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="span12">
+    <p>MD5: <%= @file.mdsum %></p>
   </div>
 </div>
 
