--- a/views/experiments.erb
+++ b/views/experiments.erb
@@ -5,36 +5,7 @@
 <% unless @experiments.length == 0  %>
   <div class="row-fluid">
     <div class="span12">
-      <table class="table-bordered table-striped table">
-        <thead>
-          <tr>
-            <th>
-              ID
-            </td>
-            <th>
-              Name
-            </th>
-            <th>
-              Description
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @experiments.each do |experiment| %>
-            <tr onClick="document.location.href='<%= experiment.to_url rescue '/404' %>';" style='cursor:pointer;'>
-              <td>
-                <%= experiment.id  %>
-              </td>
-              <td>
-                <%= link_tag(:to => "/experiment/#{experiment.id}", :name => experiment.name) %> 
-              </td>
-              <td>
-                <%= experiment.description[0..300] rescue 'N/A' %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+      <%= erb :experiments_list %>
     </div>
   </div>
 <% else %>
